turmites.lessons.turmites.helloturmite.HelloTurmite.scala.error
Turmite:7: error: value update is not a member of java.awt.Color
		if (getCouleurSol()=colors(c)) {
                    ^Turmite:10: error: reassignment to val
			state=NextState(state, c, rule);
                             ^Turmite:11: error: reassignment to val
			c=colors.length
                         ^Turmite:13: error: reassignment to val
		c=c+1
                 ^Turmite:26: error: not found: value r
	setCouleurSol(colors(r))
                             ^